--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "hello.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./hello.js localhost 8080"
+    "start": "nodemon ./hello.js"
     
   },
   "author": "",
