--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.3",
     "morgan": "^1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pug": "^2.0.4"
   }
 }
