--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "ml5node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "hello.js",
+  "name": "node",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./hello.js"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.3",
-    "morgan": "^1.9.1",
-    "mysql": "^2.18.1",
-    "pug": "^2.0.4"
+    "express": "^4.16.4",
+    "http-errors": "~1.6.3",
+    "mongoose": "^5.9.1",
+    "morgan": "~1.9.1"
   }
 }
