--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^3.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-validator": "^6.4.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^2.0.4"
   }
 }
